# CoffeeEngine

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  README_ja.md  README_pt-BR.md  build.ninja
engine/: main.cpp
engine/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  TestLayer.h  Timer.cpp  Timer.h  Window.cpp  Window.h
engine/ecs/: Entity.h
engine/ecs/components/: SpriteComponent.h  TransformComponent.h
engine/events/: Event.h  EventDispatcher.h  EventType.h  KeyPressEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h  WindowCloseEvent.h
engine/input/: InputSystem.cpp  InputSystem.h  InputTypes.h
engine/layers/: DebugLayer.cpp  DebugLayer.h  WorldLayer.h
engine/render/: Renderer2D.cpp  Renderer2D.h
engine/ui/: UIElement.h
